log/build_2026-05-17_00-43-52/dxl_wt_openarm_leader/stdout_stderr.log
Consolidate compiler generated dependencies of target read_write_wt_position_node
[ 50%] Built target pub_current_node
[ 75%] Building CXX object CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::motion_compensation()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:165:12: warning: unused variable ‘tau_imp’ [-Wunused-variable]
  165 |     double tau_imp = (Kp_[dxl_id-1] * (target_imp_pos_[dxl_id-1] -present_position_[dxl_id-1] )
      |            ^~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::read_present_position()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:207:35: error: ‘class std::unique_ptr<dynamixel::GroupFastSyncRead>’ has no member named ‘txRxPacket’
  207 |   int result = groupfastsyncread_.txRxPacket();
      |                                   ^~~~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:218:29: error: ‘class std::unique_ptr<dynamixel::GroupFastSyncRead>’ has no member named ‘isAvailable’
  218 |     if (!groupfastsyncread_.isAvailable(id, ADDR_PRESENT_STATUS, LEN_PRESENT_STATUS)) {
      |                             ^~~~~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:221:34: error: ‘class std::unique_ptr<dynamixel::GroupFastSyncRead>’ has no member named ‘getError’
  221 |     }else if (groupfastsyncread_.getError(id, &error)&& error !=0) {
      |                                  ^~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:226:70: error: ‘class std::unique_ptr<dynamixel::GroupFastSyncRead>’ has no member named ‘getData’
  226 |       int32_t position_raw = static_cast<int32_t>(groupfastsyncread_.getData(id, ADDR_PRESENT_POSITION, 4));
      |                                                                      ^~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:275:28: error: ‘class std::unique_ptr<dynamixel::GroupFastSyncRead>’ has no member named ‘getData’
  275 |         groupfastsyncread_.getData(id, ADDR_PRESENT_VELOCITY, 4)
      |                            ^~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:293:69: error: ‘class std::unique_ptr<dynamixel::GroupFastSyncRead>’ has no member named ‘getData’
  293 |       int16_t current_raw = static_cast<int16_t>(groupfastsyncread_.getData(id, ADDR_PRESENT_CURRENT, 2));
      |                                                                     ^~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In constructor ‘ReadWriteWTNode::ReadWriteWTNode()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:384:10: error: ‘group_fast_sync_read_’ was not declared in this scope; did you mean ‘groupfastsyncread_’?
  384 |     if (!group_fast_sync_read_->addParam(id)) {
      |          ^~~~~~~~~~~~~~~~~~~~~
      |          groupfastsyncread_
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
